# ezconfig

./: Cargo.toml
src/: lib.rs
