[package]
name = "ezconfig"
version = "0.2.1"
authors = ["djdisodo <djdisodo@gmail.com>"]
edition = "2018"
description = "easy and simple to use; without error handling"
license = "MIT"
repository = "https://github.com/djdisodo/ezconfig"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8"
